<resources>
    <string name="app_name">Fractals</string>

    <string name="action_settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="restore_zoom">Restore zoom</string>
    <string name="cancel">Cancel</string>
    <string name="resolution_in_px">Resolution in px</string>
    <string name="precision">Precision</string>
    <string name="escape_value">Escape value</string>
    <string name="use_color">Use color</string>
    <string name="max_color_iterations">Max color iterations</string>
    <string name="color_distribution">Color distribution</string>
    <string name="use_new_view">Use new fractal viewer (beta)</string>
    <string name="close_settings">Close settings</string>
    <string name="not_yet_available">Not yet available</string>
</resources>
