<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?selectableItemBackground"
        android:onClick="onClickSettingsBar"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_settings"
            app:srcCompat="@drawable/ic_settings_black_36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/settings_image"
            android:layout_toRightOf="@id/settings_image"
            android:text="@string/action_settings" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Spinner
            android:id="@+id/fractalSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/resolution_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/resolution_in_px"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/resolution_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1920" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/precision_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/precision_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precision"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/precision_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/escapeValue_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/escape_value"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/escapeValue_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="500" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/colorCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/maxColorIterations_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_color_iterations"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/maxColorIterations_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/colorDistribution_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/color_distribution"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/colorDistribution_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="5000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/use_new_view_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/use_new_view" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/useNewView_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickApply"
                android:text="@string/apply" />

            <Button
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickRestoreZoom"
                android:text="@string/restore_zoom" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
